pyinterp/pyinterp/pyinterp/tests/must_pass/errors/missing_arg3.py
def f(x, y):
    pass
f(1)
